--- a/biodiversity.ipynb
+++ b/biodiversity.ipynb
@@ -2,6 +2,76 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            scientific_name                            park_name  observations\n",
+      "0        Vicia benghalensis  Great Smoky Mountains National Park            68\n",
+      "1            Neovison vison  Great Smoky Mountains National Park            77\n",
+      "2         Prunus subcordata               Yosemite National Park           138\n",
+      "3      Abutilon theophrasti                  Bryce National Park            84\n",
+      "4  Githopsis specularioides  Great Smoky Mountains National Park            85\n",
+      "  category                scientific_name  \\\n",
+      "0   Mammal  Clethrionomys gapperi gapperi   \n",
+      "1   Mammal                      Bos bison   \n",
+      "2   Mammal                     Bos taurus   \n",
+      "3   Mammal                     Ovis aries   \n",
+      "4   Mammal                 Cervus elaphus   \n",
+      "\n",
+      "                                        common_names conservation_status  \n",
+      "0                           Gapper's Red-Backed Vole                 NaN  \n",
+      "1                              American Bison, Bison                 NaN  \n",
+      "2  Aurochs, Aurochs, Domestic Cattle (Feral), Dom...                 NaN  \n",
+      "3  Domestic Sheep, Mouflon, Red Sheep, Sheep (Feral)                 NaN  \n",
+      "4                                      Wapiti Or Elk                 NaN  \n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 23296 entries, 0 to 23295\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column           Non-Null Count  Dtype \n",
+      "---  ------           --------------  ----- \n",
+      " 0   scientific_name  23296 non-null  object\n",
+      " 1   park_name        23296 non-null  object\n",
+      " 2   observations     23296 non-null  int64 \n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 546.1+ KB\n",
+      "None\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5824 entries, 0 to 5823\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column               Non-Null Count  Dtype \n",
+      "---  ------               --------------  ----- \n",
+      " 0   category             5824 non-null   object\n",
+      " 1   scientific_name      5824 non-null   object\n",
+      " 2   common_names         5824 non-null   object\n",
+      " 3   conservation_status  191 non-null    object\n",
+      "dtypes: object(4)\n",
+      "memory usage: 182.1+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from matplotlib import pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import glob\n",
+    "\n",
+    "observation_df = pd.read_csv('observations.csv')\n",
+    "species_info_df = pd.read_csv('species_info.csv')\n",
+    "\n",
+    "print(observation_df.head())\n",
+    "print(species_info_df.head())\n",
+    "\n",
+    "print(observation_df.info())\n",
+    "print(species_info_df.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
