Beginning of Analysis

--- a/biodiversity.ipynb
+++ b/biodiversity.ipynb
@@ -1,9 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Loading the Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -60,14 +69,359 @@
     "import seaborn as sns\n",
     "import glob\n",
     "\n",
-    "observation_df = pd.read_csv('observations.csv')\n",
-    "species_info_df = pd.read_csv('species_info.csv')\n",
+    "observation_df = pd.read_csv('observations.csv', encoding='utf-8')\n",
+    "species_info_df = pd.read_csv('species_info.csv', encoding='utf-8')\n",
     "\n",
     "print(observation_df.head())\n",
     "print(species_info_df.head())\n",
     "\n",
     "print(observation_df.info())\n",
     "print(species_info_df.info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploring the Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "species info shape: (5824, 4)\n",
+      "observation shape: (23296, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"species info shape: {species_info_df.shape}\")\n",
+    "print(f\"observation shape: {observation_df.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of species:5541\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"number of species:{species_info_df.scientific_name.nunique()}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of categories:7\n",
+      "categories:['Mammal' 'Bird' 'Reptile' 'Amphibian' 'Fish' 'Vascular Plant'\n",
+      " 'Nonvascular Plant']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"number of categories:{species_info_df.category.nunique()}\")\n",
+    "print(f\"categories:{species_info_df.category.unique()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "category\n",
+       "Amphibian              80\n",
+       "Bird                  521\n",
+       "Fish                  127\n",
+       "Mammal                214\n",
+       "Nonvascular Plant     333\n",
+       "Reptile                79\n",
+       "Vascular Plant       4470\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "species_info_df.groupby(\"category\").size()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conservation Status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of conservation statuses: 4\n",
+      "unique conservation statuses: [nan 'Species of Concern' 'Endangered' 'Threatened' 'In Recovery']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"number of conservation statuses: {species_info_df.conservation_status.nunique()}\")\n",
+    "print(f\"unique conservation statuses: {species_info_df.conservation_status.unique()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NaN Values (species info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of na values:5633\n",
+      "conservation_status\n",
+      "Endangered             16\n",
+      "In Recovery             4\n",
+      "Species of Concern    161\n",
+      "Threatened             10\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"number of na values:{species_info_df.conservation_status.isna().sum()}\")\n",
+    "print(species_info_df.groupby(\"conservation_status\").size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of parks:4\n",
+      "park names:['Great Smoky Mountains National Park' 'Yosemite National Park'\n",
+      " 'Bryce National Park' 'Yellowstone National Park']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"number of parks:{observation_df.park_name.nunique()}\") \n",
+    "print(f\"park names:{observation_df.park_name.unique()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of observations:3314739\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"number of observations:{observation_df.observations.sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis\n",
+    "-Converting NaN values to \"No Intervention\", as these species are not at risk or of any concern."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "conservation_status\n",
+       "Endangered              16\n",
+       "In Recovery              4\n",
+       "No Intervention       5633\n",
+       "Species of Concern     161\n",
+       "Threatened              10\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "species_info_df.fillna(\"No Intervention\", inplace=True)\n",
+    "species_info_df.groupby(\"conservation_status\").size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>category</th>\n",
+       "      <th>Amphibian</th>\n",
+       "      <th>Bird</th>\n",
+       "      <th>Fish</th>\n",
+       "      <th>Mammal</th>\n",
+       "      <th>Nonvascular Plant</th>\n",
+       "      <th>Reptile</th>\n",
+       "      <th>Vascular Plant</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>conservation_status</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Endangered</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>In Recovery</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Species of Concern</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>43.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Threatened</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "category             Amphibian  Bird  Fish  Mammal  Nonvascular Plant  \\\n",
+       "conservation_status                                                     \n",
+       "Endangered                 1.0   4.0   3.0     7.0                NaN   \n",
+       "In Recovery                NaN   3.0   NaN     1.0                NaN   \n",
+       "Species of Concern         4.0  72.0   4.0    28.0                5.0   \n",
+       "Threatened                 2.0   NaN   4.0     2.0                NaN   \n",
+       "\n",
+       "category             Reptile  Vascular Plant  \n",
+       "conservation_status                           \n",
+       "Endangered               NaN             1.0  \n",
+       "In Recovery              NaN             NaN  \n",
+       "Species of Concern       5.0            43.0  \n",
+       "Threatened               NaN             2.0  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conservation_category = species_info_df[species_info_df.conservation_status != \"No Intervention\"]\\\n",
+    ".groupby([\"conservation_status\",\"category\"])['scientific_name']\\\n",
+    ".count().unstack()\n",
+    "\n",
+    "conservation_category"
    ]
   },
   {
