--- a/biodiversity.ipynb
+++ b/biodiversity.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {
     "scrolled": true
    },
@@ -66,6 +66,7 @@
    "source": [
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
+    "from scipy.stats import chi2_contingency\n",
     "import seaborn as sns\n",
     "import glob\n",
     "\n",
@@ -609,21 +610,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected character after line continuation character (3629297091.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[52], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    category_counts['percent_protected'] = category_counts.protected /\\ (category_counts.protected + category_counts.not_protected) * 100\u001b[0m\n\u001b[1;37m                                                                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected character after line continuation character\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>category</th>\n",
+       "      <th>not_protected</th>\n",
+       "      <th>protected</th>\n",
+       "      <th>percent_protected</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Amphibian</td>\n",
+       "      <td>72</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8.860759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bird</td>\n",
+       "      <td>413</td>\n",
+       "      <td>75</td>\n",
+       "      <td>15.368852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Fish</td>\n",
+       "      <td>115</td>\n",
+       "      <td>11</td>\n",
+       "      <td>8.730159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Mammal</td>\n",
+       "      <td>146</td>\n",
+       "      <td>30</td>\n",
+       "      <td>17.045455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Nonvascular Plant</td>\n",
+       "      <td>328</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.501502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Reptile</td>\n",
+       "      <td>73</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6.410256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Vascular Plant</td>\n",
+       "      <td>4216</td>\n",
+       "      <td>46</td>\n",
+       "      <td>1.079305</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            category  not_protected  protected  percent_protected\n",
+       "0          Amphibian             72          7           8.860759\n",
+       "1               Bird            413         75          15.368852\n",
+       "2               Fish            115         11           8.730159\n",
+       "3             Mammal            146         30          17.045455\n",
+       "4  Nonvascular Plant            328          5           1.501502\n",
+       "5            Reptile             73          5           6.410256\n",
+       "6     Vascular Plant           4216         46           1.079305"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "category_counts['percent_protected'] = category_counts.protected /\\ (category_counts.protected + category_counts.not_protected) * 100\n",
+    "category_counts['percent_protected'] = category_counts.protected / (category_counts.protected + category_counts.not_protected) * 100\n",
+    "\n",
     "category_counts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chi-Square Test - Conservation status rates\n",
+    "#### Birds & Mammals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Chi2ContingencyResult(statistic=np.float64(3.614446345777712), pvalue=np.float64(0.057279784427834525), dof=1, expected_freq=array([[ 68.09380531, 418.90619469],\n",
+       "       [ 10.90619469,  67.09380531]]))"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contingency1 = [[74, 413],[5, 73]]\n",
+    "chi2_contingency(contingency1)"
    ]
   },
   {
